--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "yiisoft/yii2-authclient": "~2.1.0",
         "yiisoft/yii2-imagine": "~2.1.0",
         "2amigos/yii2-transliterator-helper": "*",
-        "linslin/yii2-curl": "*"
+        "linslin/yii2-curl": "*",
+        "zomberg/phpquery": "dev-master"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0",
