--- a/.gitignore
+++ b/.gitignore
@@ -12,5 +12,9 @@ web/download/
 config/params.php
 config/db.php
 web/js/*.min.js
+web/css/*.min.css
 web/js/admin/*.min.js
+web/js/admin/*.min.css
+web/js/admin/pop-up/*.min.css
+web/sitemap.xml
 web/index.php
