created the search based on sphinx tec.

--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     "minimum-stability": "stable",
     "require": {
         "php": ">=5.4.0",
-        "yiisoft/yii2": "~2.0.5",
+        "yiisoft/yii2": "2.0.13",
         "yiisoft/yii2-bootstrap": "~2.0.0",
         "yiisoft/yii2-swiftmailer": "~2.0.0",
         "yiisoft/yii2-authclient": "~2.1.0",
@@ -23,7 +23,8 @@
         "2amigos/yii2-transliterator-helper": "*",
         "lajax/yii2-asset-minifier": "*",
         "linslin/yii2-curl": "*",
-        "zomberg/phpquery": "dev-master"
+        "zomberg/phpquery": "dev-master",
+        "yiisoft/yii2-sphinx": "^2.0"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0",
